# Laboratorio_Programmazione_2023_24

./: CMakeLists.txt  README.md  Subject.cpp  Subject.h  barra.cpp  barra.h  main  main.cpp  makefile  observer.h  pulsante (1).cpp  pulsante.cpp  pulsante.h  subject.h
test/: CMakeLists.txt  Test.cpp  Testclassi.cpp  makefile  pulsanteTest.cpp
